--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           Get endless entertainment,live sports,and the shows and movies you
           love.
         </h2>
-        <p class="p-1">GET THE DISNEY BUNDLE</p>
+        <p class="py-2">GET THE DISNEY BUNDLE</p>
         <a href="" class="text-light">What's included?see Bundle Term</a>
         <a href="" class="text-light">Sign up for Hulu only </a>
       </div>
